<resources>
    <string name="app_name">YourHelp</string>
    <string name="la_tua_nuova_comfort_zone">La tua nuova comfort zone</string>
    <string name="logo_description">Logo</string>
    <string name="registrati">Registrati</string>
    <string name="nome">Nome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="conferma_password">Conferma password</string>
    <string name="crea_account">Crea account</string>
</resources>